--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^23.3.9",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-router": "^3.0.2",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
   },
